<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/signedInTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signedInAs" />

        <Button
            android:id="@+id/addaDetailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_menu_btn"
            android:text="@string/addDetailView"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_filter_preset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_menu_btn"
            android:text="@string/addFilter_Label"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/adduser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_menu_btn"
            android:text="@string/addUser"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_menu_btn"
            android:text="@string/changePass"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>