<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

<LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView11"
         android:background="@drawable/dropshadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Color"
                android:textColor="@color/atmosphere"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Source"
                android:textColor="@color/atmosphere"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/rtext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="#FF0000"
                android:text="R"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/roption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <SeekBar
                android:id="@+id/bar11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/roption1"
                android:layout_toRightOf="@id/rtext1"
                android:max="255"
                android:progress="255" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gtext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="18sp"
                android:textColor="#00FF00"
                android:text="G" />

            <Spinner
                android:id="@+id/goption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <SeekBar
                android:id="@+id/bar22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/goption1"
                android:layout_toRightOf="@id/gtext1"
                android:max="255"
                android:progress="255" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/btext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="#0000FF"
                android:text="B" />

            <Spinner
                android:id="@+id/boption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <SeekBar
                android:id="@+id/bar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/boption"
                android:layout_toRightOf="@id/btext"
                android:max="255"
                android:progress="255" />
        </RelativeLayout>

        <TextView
            android:id="@+id/displaycolorInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/atmosphere" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/preset1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:layout_marginTop="25dp"
                 android:background="@drawable/blue_menu_btn"
                android:text="@string/preset1" />

            <Button
                android:id="@+id/preset2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:layout_marginTop="25dp"
                 android:background="@drawable/blue_menu_btn"
                android:text="@string/preset2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/preset3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:layout_marginTop="25dp"
                android:background="@drawable/blue_menu_btn"
                android:text="@string/preset3" />

            <Button
                android:id="@+id/preset4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:layout_marginTop="25dp"
                android:background="@drawable/blue_menu_btn"
                android:text="@string/preset4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/resetPresets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                android:background="@drawable/blue_menu_btn"
                android:text="@string/reset" />

            <Button
                android:id="@+id/grayscl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/blue_menu_btn"
                android:text="@string/grayscale" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/DetailGalleryTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/detail_gallery"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" >

            <Button
                android:id="@+id/detailViewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_menu_btn"
                android:text="@string/detailview" />

            <Button
                android:id="@+id/galleryViewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_menu_btn"
                android:text="@string/galleryview" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>